tests/samples/negative/types/bcast_u8_from_bool.ax
module bcast_u8_from_bool;

fn main() -> i32 {
    let value: u8 = bitcast<u8>(true);
    return ((value) as i32);
}
